<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvProdLNamePlaceholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/nameProd_Placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvProdLName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvProdLNamePlaceholder"
        app:layout_constraintTop_toBottomOf="@+id/tvProdLNamePlaceholder" />

    <TextView
        android:id="@+id/tvProdLMinAgePlaceholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/minAgeProd_Placeholder"
        app:layout_constraintStart_toEndOf="@+id/tvProdLNamePlaceholder"
        app:layout_constraintTop_toTopOf="@+id/tvProdLNamePlaceholder" />

    <TextView
        android:id="@+id/tvProdLMinAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvProdLMinAgePlaceholder"
        app:layout_constraintTop_toTopOf="@+id/tvProdLName" />

    <TextView
        android:id="@+id/tvgenreProdLPlaceholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/genreProd_Placeholder"
        app:layout_constraintStart_toEndOf="@+id/tvProdLMinAgePlaceholder"
        app:layout_constraintTop_toTopOf="@+id/tvProdLMinAgePlaceholder" />

    <TextView
        android:id="@+id/tvProdLGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvgenreProdLPlaceholder"
        app:layout_constraintTop_toTopOf="@+id/tvProdLMinAge" />

    <TextView
        android:id="@+id/tvPublisherProdLPlaceholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/publisherProd_Placeholder"
        app:layout_constraintStart_toEndOf="@+id/tvgenreProdLPlaceholder"
        app:layout_constraintTop_toTopOf="@+id/tvgenreProdLPlaceholder" />

    <TextView
        android:id="@+id/tvProdLPublisher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvPublisherProdLPlaceholder"
        app:layout_constraintTop_toTopOf="@+id/tvProdLGenre" />
</androidx.constraintlayout.widget.ConstraintLayout>